overflow fixed

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 body {
+  overflow: hidden;
   position: relative;
   height: 100vh;
   display: flex;
